--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -8,9 +8,10 @@ bazel_dep(name = "rules_go", version = "0.42.0")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
-
-use_repo(go_deps, 
-    "com_github_aws_aws_sdk_go_v2_config", 
-    "com_github_aws_aws_sdk_go_v2_service_ec2", 
-    "com_github_taylormonacelli_goldbug"
+use_repo(
+    go_deps,
+    "com_github_aws_aws_sdk_go_v2_config",
+    "com_github_aws_aws_sdk_go_v2_service_ec2",
+    "com_github_taylormonacelli_goldbug",
+    "com_github_taylormonacelli_lemondrop",
 )
