--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -19,9 +19,9 @@ go_library(
     importpath = "github.com/taylormonacelli/dotchin",
     visibility = ["//visibility:public"],
     deps = [
+        "//instanceinfo",
         "@com_github_aws_aws_sdk_go_v2_config//:config",
         "@com_github_aws_aws_sdk_go_v2_service_ec2//:ec2",
-        "@com_github_aws_aws_sdk_go_v2_service_ec2//types",
         "@com_github_taylormonacelli_lemondrop//:lemondrop",
     ],
 )
