--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -25,6 +25,7 @@ go_library(
         "//instanceinfo",
         "@com_github_aws_aws_sdk_go_v2_config//:config",
         "@com_github_aws_aws_sdk_go_v2_service_ec2//:ec2",
+        "@com_github_taylormonacelli_forestfish//mymazda",
         "@com_github_taylormonacelli_lemondrop//:lemondrop",
     ],
 )
