--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -16,13 +16,13 @@ gazelle(
 go_library(
     name = "dotchin",
     srcs = [
-        "cache.go",
         "dotchin.go",
         "helper.go",
     ],
     importpath = "github.com/taylormonacelli/dotchin",
     visibility = ["//visibility:public"],
     deps = [
+        "//cache",
         "//instanceinfo",
         "@com_github_aws_aws_sdk_go_v2_config//:config",
         "@com_github_aws_aws_sdk_go_v2_service_ec2//:ec2",
