--- a/.bazelrc
+++ b/.bazelrc
@@ -1,6 +1,6 @@
 common --enable_bzlmod
-common --experimental_enable_bzlmod
 common --lockfile_mode=off
+common --verbose_failures=true
 build --symlink_prefix=dist/
 query --output=label_kind
 test --test_output=errors
